# PROSPEC

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: Commands.txt  compareMissing.py  getAccounts.py  get_accounts.py  get_teams.py  links.txt
src/: App.css  App.tsx  index.tsx  interfaces.ts  interfaces.tsx  licenses.ts  prospec.ts  spectator.tsx  typings.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bats/: mac.txt  win.txt
src-tauri/data/players/: lck.json
src-tauri/locales/: locales.ts
src-tauri/locales/br_BA/: translation.json
src-tauri/locales/en_UK/: translation.json
src-tauri/locales/en_US/: translation.json
src-tauri/locales/fi_FI/: translation.json
src-tauri/locales/ja_JP/: translation.json
src-tauri/locales/kr_KR/: translation.json
src-tauri/locales/ku_KZ/: translation.json
src-tauri/locales/sv_SV/: translation.json
src-tauri/src/: main.rs
src/components/: card.tsx  options.tsx  players.tsx  settings.tsx  sidebar.tsx  titlebar.tsx
src/components/cards/: AccountsCard.tsx  Card.tsx  CardMenu.tsx
src/components/cq/: CQLeaderboardEntry.tsx  ChampionsQueue.tsx  ChampionsQueuePages.tsx
src/components/css/: accounts.css  card.css  cq.css  options.css  players.css  settings.css  settings.min.css  sidebar.css  (+1 more)
src/context/: SettingsContext.tsx  SpectatorContext.tsx
src/data/: credit.txt  favbgs.txt  ttp_player_accounts.csv
src/imports/: icons.ts  interfaces.ts  licenses.ts  locales.ts  prototypes.ts  typings.ts  utils.ts
src/locales/: locales.ts
(+42 files in other folders)
